# terminal-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
terminal_ai/: cli.py
terminal_ai/agent/: orchestrator.py
terminal_ai/llm/: ollama_provider.py  provider.py
terminal_ai/memory/: __init__.py  retriever.py  store.py  summarizer.py
terminal_ai/rag/: __init__.py  chunker.py  embedder.py  indexer.py  loader.py  retriever.py  store.py
terminal_ai/tools/: ask_codebase.py  base.py  filesystem.py  registry.py  search.py
terminal_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
