[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-ai-agent"
version = "0.1.0"
description = "A local AI agent with tool-calling, RAG, and persistent memory"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "chromadb>=0.5",
]

[project.scripts]
ai-agent = "terminal_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal_ai*"]
exclude = ["venv*", "*.egg-info"]
